[project]
name = "evmauth-docs"
version = "0.1.0"
description = "Documentation for EVMAuth"
requires-python = ">=3.8"
dependencies = [
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]
